# remesh-tools-bin

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: release.yml
cmake/components/: acvd.cmake  openvdb_preprocess.cmake
cmake/scripts/: patch_openvdb_cmake.py
examples/: README.md
licenses/: oneTBB-THIRD-PARTY-PROGRAMS.txt
native/: CMakeLists.txt  README.md
native/cmake/: acvd.cmake  openvdb.cmake  openvdb_dependencies.cmake
native/src/: openvdb_sdf_remesh.cpp
native/tools/: fetch_vtk_sdk.py  patch_openvdb.py
src/acvd_bin/: __init__.py  _cli.py
src/remesh_tools_bin/: __init__.py  _cli.py
src/sim_asset_tools/: __init__.py  _publish.py  cli.py  legacy.py  manifest.py  native.py  surface.py
src/sim_asset_tools/formats/: __init__.py  manifest.py  mjcf.py  mujoco_model.py  object_manifest.py  urdf.py
src/sim_asset_tools/mesh/: __init__.py  acvd.py  coacd.py  io.py  normalize.py  openvdb.py  properties.py  validation.py
src/sim_asset_tools/workflows/: __init__.py  _surface.py  body_surfaces.py  object.py  object_batch.py
tests/: smoke_wheel.py  test_body_surfaces.py  test_cli.py  test_cqdc_interop.py  test_fetch_vtk_sdk.py  test_formats.py  test_manifest.py  test_mesh.py  test_mesh_validation.py  test_native.py  test_object_prepare.py  test_patch_openvdb.py  test_patch_openvdb_cmake.py  test_sim_cli.py  test_workflows.py
tests/fixtures/: two_boxes.xml
tools/: fetch_vtk_sdk.py
