[build-system]
requires = [
  "scikit-build-core>=1.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "remesh-tools-bin"
version = "0.1.0"
description = "Python package wrapper for native remeshing command line tools"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
license-files = [
  "LICENSE",
  "licenses/*.txt",
  "third_party/ACVD/LICENSE.txt",
]
authors = [
  { name = "remesh-tools-bin maintainers" },
]
dependencies = [
  "vtk==9.5.2",
]

[project.urls]
ACVD = "https://github.com/valette/ACVD"
OpenVDB = "https://github.com/AcademySoftwareFoundation/openvdb"
Repository = "https://github.com/JYChen18/remesh-tools-bin"

[project.scripts]
remesh = "remesh_tools_bin._cli:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/remesh_tools_bin"]
sdist.inclusion-mode = "explicit"
sdist.include = [
  "/CMakeLists.txt",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/cmake/**",
  "/licenses/**",
  "/native/**",
  "/src/remesh_tools_bin/**",
  "/third_party/ACVD/**",
  "/tools/**",
]
sdist.exclude = [
  "/build/**",
  "/CMakeCache.txt",
  "/CMakeFiles/**",
  "/dist/**",
  "**/__pycache__/**",
  "__pycache__/",
  "**/*.pyc",
  "**/*.pyo",
]

[tool.scikit-build.cmake]
build-type = "Release"
