[build-system]
requires = [
  "scikit-build-core>=1.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "sim-asset-tools"
version = "0.2.0"
description = "Portable tools for preparing simulation-ready mesh and model assets"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
license-files = [
  "LICENSE",
  "licenses/*.txt",
  "third_party/ACVD/LICENSE.txt",
]
authors = [
  { name = "sim-asset-tools maintainers" },
]
dependencies = [
  "numpy>=1.26",
  "trimesh>=4.0",
  "vtk==9.6.2",
]

[project.urls]
ACVD = "https://github.com/valette/ACVD"
OpenVDB = "https://github.com/AcademySoftwareFoundation/openvdb"
Repository = "https://github.com/JYChen18/sim-asset-tools"

[project.scripts]
sim-assets = "sim_asset_tools.cli:main"

[project.optional-dependencies]
coacd = [
  "coacd>=1.0.11",
]
mujoco = [
  "mujoco>=3.3",
]
all = [
  "coacd>=1.0.11",
  "mujoco>=3.3",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.12",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/sim_asset_tools"]
wheel.py-api = "py3"
sdist.inclusion-mode = "explicit"
sdist.include = [
  "/CMakeLists.txt",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/cmake/**",
  "/licenses/**",
  "/native/**",
  "/src/sim_asset_tools/**",
  "/third_party/ACVD/**",
  "/tools/**",
]
sdist.exclude = [
  "/build/**",
  "/CMakeCache.txt",
  "/CMakeFiles/**",
  "/dist/**",
  "**/__pycache__/**",
  "__pycache__/",
  "**/*.pyc",
  "**/*.pyo",
]

[tool.scikit-build.cmake]
build-type = "Release"

[tool.cibuildwheel]
build = "cp313-*"
skip = "*-musllinux*"
archs = ["native"]
test-sources = [
  "tests/fixtures",
  "tests/smoke_wheel.py",
]
test-command = "python tests/smoke_wheel.py"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
repair-wheel-command = "auditwheel repair --exclude 'libvtk*.so*' -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "12.0" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} --exclude libvtk --ignore-missing-dependencies -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
repair-wheel-command = 'delvewheel repair --ignore-existing --analyze-existing --analyze-existing-exes --exclude "vtk*.dll" -w {dest_dir} -v {wheel}'
